# BST

./: CMakeLists.txt  README.md  deck.cpp  deck.h  doubly_linked_list.cpp  doubly_linked_list.h  main.cpp  node.h
lib/lab04/: CMakeLists.txt  README.md
lib/lab04/inc/: linked_list.h  node.h
lib/lab04/src/: linked_list.cpp  node.cpp
lib/lab05/: CMakeLists.txt  README.md
lib/lab05/inc/: expression.h  node.h  queue.h  stack.h
lib/lab05/src/: expression.cpp  node.cpp  queue.cpp  stack.cpp
lib/lab06/: CMakeLists.txt
lib/lab06/inc/: deck.h  doubly_linked_list.h  node.h
lib/lab06/src/: deck.cpp  doubly_linked_list.cpp
lib/lab07/: CMakeLists.txt  README.md
lib/lab07/inc/: node.h  tree.h
lib/lab07/src/: tree.cpp
src/: CMakeLists.txt  deck.cpp  deck.h  node.h
test/: CMakeLists.txt  doubly_test.cpp  lab06_tests.cpp  lab07_tests.cpp
